Updated c100 rebuild code